Fixed issue where when scroll overflow occurs, the background color of the overflowing region does not match the background color of the page.

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #f55a29;
+}
+
 .App {
     text-align: center;
     background-color: #f55a29;
